deployment/terraform/terraform-provision-ekscluster-use-case-1/internet-gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    Name = "igw"
  }
}
